build_log.txt
    Checking photo_gallery_rs v0.1.0 (/home/erceppi/Documentos/proyectos/proyectos_software/photo_gallery_linux)
error[E0277]: the trait bound `GalleryWindow: Downgrade` is not satisfied
   --> src/main.rs:62:35
    |
 62 |       view.open_btn.connect_clicked(glib...
    |  ___________________________________^
 63 | |         #[weak]
 64 | |         view,
 65 | |         #[strong]
...   |
102 | |     ));
    | |_____^ unsatisfied trait bound
    |
help: the trait `Downgrade` is not implemented for `GalleryWindow`
   --> src/view/window.rs:5:1
    |
  5 | pub struct GalleryWindow {
    | ^^^^^^^^^^^^^^^^^^^^^^^^
    = help: the following other types implement trait `Downgrade`:
              &T
              ATContext
              AboutDialog
              Accessible
              Action
              ActionBar
              ActionGroup
              ActionMap
            and 514 others
    = note: the full name for the type has been written to '/home/erceppi/Documentos/proyectos/proyectos_software/photo_gallery_linux/target/debug/deps/photo_gallery_rs-83d4492c8ac4f509.long-type-16907403146398589398.txt'
    = note: consider using `--verbose` to print the full type name to the console
    = note: this error originates in the macro `glib::clone` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused variable: `model`
  --> src/view_model/gallery_view_model.rs:37:13
   |
37 |         let model = self.model.clon...
   |             ^^^^^ help: if this is intentional, prefix it with an underscore: `_model`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

error[E0502]: cannot borrow `m` as immutable because it is also borrowed as mutable
   --> src/view_model/gallery_view_model.rs:107:20
    |
107 |         m.set_zoom(m.zoom_level);
    |         - -------- ^ immutable borrow occurs here
    |         | |
    |         | mutable borrow later used by call
    |         mutable borrow occurs here

Some errors have detailed explanations: E0277, E0502.
For more information about an error, try `rustc --explain E0277`.
warning: `photo_gallery_rs` (bin "photo_gallery_rs") generated 1 warning
error: could not compile `photo_gallery_rs` (bin "photo_gallery_rs") due to 2 previous errors; 1 warning emitted
